# LibCosmic-Bar

./: .gitignore  Cargo.toml  shell.nix
src/: bar.rs  launcher.rs  main.rs  window.rs  window_trait.rs
