[package]
name = "my-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.11.0", features = ["wayland"]}
chrono = "0.4.39"
hyprland = "0.4.0-beta.2"
regex = "1.11.1"
rust-fuzzy-search = "0.1.1"
walkdir = "2.5.0"
xdg-desktop-entries = "0.1.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [ "applet-token", "wgpu" ]
